external-crates/move/crates/move-compiler/tests/move_check/typing/subtype_bind_invalid.exp
error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/subtype_bind_invalid.move:5:17
  │
5 │         let _x: &mut u64 = &0;
  │                 ^^^^^^^^   -- Given: '&{integer}'
  │                 │           
  │                 Invalid type annotation
  │                 Expected: '&mut u64'

error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/subtype_bind_invalid.move:9:23
  │
9 │         let (_x, _y): (&mut u64, &mut u64) = (&0, &0);
  │                       ^^^^^^^^^^^^^^^^^^^^    -- Given: '&{integer}'
  │                       ││                       
  │                       │Expected: '&mut u64'
  │                       Invalid type annotation

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_bind_invalid.move:10:23
   │
10 │         let (_x, _y): (&mut u64, &u64) = (&0, &0);
   │                       ^^^^^^^^^^^^^^^^    -- Given: '&{integer}'
   │                       ││                   
   │                       │Expected: '&mut u64'
   │                       Invalid type annotation

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_bind_invalid.move:11:23
   │
11 │         let (_x, _y): (&u64, &mut u64) = (&0, &0);
   │                       ^^^^^^^^^^^^^^^^        -- Given: '&{integer}'
   │                       │      │                 
   │                       │      Expected: '&mut u64'
   │                       Invalid type annotation

